feat: integrate demo app
* demo-repo/restructure: (31 commits)
  refactor: restructure into demo folder
  chore: update to llm-chain 0.22 (#27)
  refactor: more error handling in vidoe example
  chore: symfony 7.3 update
  fix: pin chroma db version and clean up (#26)
  feat: add demo of GPT vision capabilities based on video stream (#22)
  chore: dependecy update (#23)
  feat: extend wikipedia system prompt by tools (#21)
  chore: update to lib v0.19 (#20)
  refactor: optimize audio chat ui (#19)
  feat: audio example (#18)
  chore: updating dependencies (#17)
  chore: composer update incl twig cve patch (#16)
  chore: llm chain update with system_prompt support (#15)
  chore: install bundle 0.12 (#14)
  chore: update to llm-chain 0.11.0 (#13)
  chore: library update (#12)
  refactor: follow up on example structure to have them cleaner and more separated (#11)
  fix: typed animation only on xhr responses (#10)
  refactor: moving classes to a more component like structure (#9)
  ...

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="{{ app.request.locale }}">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}LLM Chain Demo{% endblock %}</title>
+        <title>{% block title %}Symfony AI Demo{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/ico" href="{{ asset('favicon.ico') }}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -18,7 +18,7 @@
             <div class="container">
                 <a class="navbar-brand ms-2 p-0" href="{{ path('index') }}">
                     {{ ux_icon('fluent:bot-24-filled', { height: '40px', width: '40px' }) }}
-                    <strong>LLM Chain</strong> Demo
+                    <strong>Symfony AI</strong> Demo
                 </a>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto me-2 mb-0">
@@ -39,7 +39,7 @@
                         </li>
                         <li class="nav-item"><span class="nav-link">|</span></li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/php-llm/symfony-demo" target="_blank">{{ ux_icon('mdi:github', { height: '20px', width: '20px' }) }} GitHub</a>
+                            <a class="nav-link" href="https://github.com/symfony/ai" target="_blank">{{ ux_icon('mdi:github', { height: '20px', width: '20px' }) }} GitHub</a>
                         </li>
                     </ul>
                 </div>
@@ -48,9 +48,9 @@
         <div class="container pt-5">
             {% block content %}{% endblock %}
             <footer class="py-4 text-center">
-                Symfony demo application for <a href="https://github.com/php-llm/llm-chain" target="_blank">LLM Chain</a>
+                Demo application for <a href="https://github.com/symfony/ai" target="_blank">Symfony AI</a>
                 &bullet;
-                Feel free to propose more examples on <a href="https://github.com/php-llm/symfony-demo" target="_blank">GitHub</a>
+                Feel free to propose more examples on <a href="https://github.com/symfony/ai" target="_blank">GitHub</a>
             </footer>
         </div>
     </body>
