--- a/assets/styles/recipe.css
+++ b/assets/styles/recipe.css
@@ -18,7 +18,7 @@
             color: #253724;
         }
 
-        #chat-reset, #chat-submit {
+        button {
             &:hover {
                 background: rgba(48, 158, 29, 0.65);
                 border-color: rgba(48, 158, 29, 0.65);
