--- a/templates/components/blog.html.twig
+++ b/templates/components/blog.html.twig
@@ -4,7 +4,7 @@
     <div class="card-header p-2">
             {{ ux_icon('mdi:symfony', { height: '32px', width: '32px' }) }}
             <strong class="ms-1 pt-1 d-inline-block">Symfony Blog Bot</strong>
-        <button id="chat-reset" class="btn btn-sm btn-outline-secondary float-end">{{ ux_icon('material-symbols:cancel') }} Reset Chat</button>
+        <button {{ live_action('reset') }} class="btn btn-sm btn-outline-secondary float-end">{{ ux_icon('material-symbols:cancel') }} Reset Chat</button>
     </div>
     <div id="chat-body" class="card-body p-4 overflow-auto">
         {% for message in this.messages %}
@@ -22,9 +22,13 @@
         </div>
     </div>
     <div class="card-footer p-2">
-        <div class="input-group">
-            <input id="chat-message" type="text" class="form-control border-0" placeholder="Write a message ...">
-            <button id="chat-submit" class="btn btn-outline-secondary border-0" type="button">{{ ux_icon('mingcute:send-fill', { height: '25px', width: '25px' }) }} Submit</button>
-        </div>
+        <form class="input-group" {{ live_action('submit:prevent') }}>
+            <input autofocus id="chat-message"
+                   data-model="norender|message"
+                   type="text" class="form-control border-0" placeholder="Write a message ...">
+            <button class="btn btn-outline-secondary border-0">
+                {{ ux_icon('mingcute:send-fill', { height: '25px', width: '25px' }) }} Submit
+            </button>
+        </form>
     </div>
 </div>
