--- a/templates/components/video.html.twig
+++ b/templates/components/video.html.twig
@@ -15,9 +15,13 @@
         </div>
     </div>
     <div class="card-footer p-2">
-        <div class="input-group">
-            <input id="chat-message" type="text" class="form-control border-0" placeholder="What do you see?">
-            <button id="chat-submit" class="btn btn-outline-secondary border-0" type="button">{{ ux_icon('mingcute:send-fill', { height: '25px', width: '25px' }) }} Submit</button>
-        </div>
+        <form class="input-group" data-action="submit->video#submit">
+            <input autofocus id="chat-message"
+                   data-model="norender|instruction"
+                   type="text" class="form-control border-0" placeholder="What do you see?">
+            <button class="btn btn-outline-secondary border-0">
+                {{ ux_icon('mingcute:send-fill', { height: '25px', width: '25px' }) }} Submit
+            </button>
+        </form>
     </div>
 </div>
